kubernetes/apps/network/unifi-os-backup/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.36.0-standalone-strict/networkpolicy-networking-v1.json
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: unifi-os-backup
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: unifi-os-backup
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    - to:
        - ipBlock:
            cidr: 10.0.0.1/32
        - ipBlock:
            cidr: 10.0.10.95/32
      ports:
        - port: 443
          protocol: TCP
